--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="DarthVader" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DarthVader.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="DarthVader__1_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DarthVader (1).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Goku" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Goku.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
